Trying to deploy to Heroku

--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "project_two",
   "version": "1.0.0",
   "description": "",
+  "engines" : {
+    "node" : "^12.10.0"
+  },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chart.js": "^2.8.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "express-react-views": "^0.11.0",
