--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-react-views": "^0.11.0",
     "js-sha256": "^0.9.0",
     "method-override": "^3.0.0",
+    "moment": "^2.24.0",
     "pg": "^7.12.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2"
